Incomplete - task 16: root_dirs necessary? http://sourceforge.net/p/sdmlib/tickets/16 added storyboard.addClassDiagram(model) method Many infrastructure changes for multi player maumau Tremendous speedup for storyboard tests by caching burnupcharts
git-svn-id: https://svn.code.sf.net/p/sdmlib/code-0/trunk@487 2b52b8e8-071c-4d2f-a868-389f512d1cbb